testsuite/tests/ghc-regress/parser/should_fail/readFail002.hs
module ShouldFail where

-- !!! newlines in strings aren't allowed

f = "
"
